--- a/app/views/pages/miss.scala.html
+++ b/app/views/pages/miss.scala.html
@@ -84,7 +84,7 @@ title = " 美食街_食美特，爱美食爱生活"
                 <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
             </h3>
 
-            <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+            <div class="info" >@themeIntro</div>
             <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
@@ -119,7 +119,7 @@ title = " 美食街_食美特，爱美食爱生活"
                     <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
                 </h3>
 
-                <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+                <div class="info" >@themeIntro</div>
                 <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
@@ -155,7 +155,7 @@ title = " 美食街_食美特，爱美食爱生活"
                     <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
                 </h3>
 
-                <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+                <div class="info" >@themeIntro</div>
                 <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
@@ -190,7 +190,7 @@ title = " 美食街_食美特，爱美食爱生活"
                     <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
                 </h3>
 
-                <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+                <div class="info" >@themeIntro</div>
                 <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
@@ -225,7 +225,7 @@ title = " 美食街_食美特，爱美食爱生活"
                 <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
             </h3>
 
-            <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
+            <div class="info" >@themeIntro</div>
             <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
