--- a/app/views/themes/view2.scala.html
+++ b/app/views/themes/view2.scala.html
@@ -4,7 +4,7 @@ user,
 title = theme.name+"  _ 食美特，爱美食爱生活",
 keywords =   theme.tags.getOrElse("食美特"),
 description =  theme.intro.getOrElse("食美特，爱美食爱生活")
-)(css="/assets/css/template/theme2.detail.css") {
+)(css="/assets/css/template/theme.css") {
 <style>
     body{
         background-color:@style.pageBgColor;
