--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -109,13 +109,13 @@ description = goods.intro
                  <div class="operate">
 
                          <a rel="nofollow" class="info-wrong" href="javascript:;" id="J_JiuCuo" data-proid="488">信息有误？</a>
-                     <div class="share-link">
+                     <div class="share-link" data-sharetxt="@goods.name" data-sharepic="@goods.pic" data-sharelink="@controllers.routes.Goods.view(goods.id.get)">
                          <label class="fl l20 gc">分享到：</label>
-                         <a class="s-sina fl" href="javascript:;" alt="分享到新浪微博">新浪微博</a>
-                         <a class="s-qzone fl" href="javascript:;" alt="分享到QQ空间">QQ空间</a>
-                         <a class="s-tencent fl" href="javascript:;" alt="分享到腾讯微博">腾讯微博</a>
-                         <a class="s-douban fl" href="javascript:;" alt="分享到豆瓣">豆瓣</a>
-                         <a class="s-renren fl" href="javascript:;" alt="分享到人人网">人人网</a>
+                         <a class="s-sina fl" href="javascript:;" data-type="s-sina" alt="分享到新浪微博">新浪微博</a>
+                         <a class="s-qzone fl" href="javascript:;" data-type="s-qzone" alt="分享到QQ空间">QQ空间</a>
+                         <a class="s-tencent fl" href="javascript:;" data-type="s-tencent" alt="分享到腾讯微博">腾讯微博</a>
+                         <a class="s-douban fl" href="javascript:;" data-type="s-douban" alt="分享到豆瓣">豆瓣</a>
+                         <a class="s-renren fl" href="javascript:;"  data-type="s-renren" alt="分享到人人网">人人网</a>
 
                      </div>
                  </div>
