--- a/app/views/themes/view2.scala.html
+++ b/app/views/themes/view2.scala.html
@@ -180,8 +180,8 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
     <div class="discusses">
         <h3 class="title">我很想对这个主题说</h3>
         <div class="discusses-wrap clearfix">
-            <textarea class="b-textarea" id="J_SideCmtContent" name="commentContent" id="J_CommentContent">你也可以顺便说点什么 O(∩_∩)O</textarea>
-            <a class="bbl-btn" id="J_SideCmt" href="javascript:;">确定</a>
+            <textarea class="b-textarea" id="J_cmtContent" name="commentContent">你也可以顺便说点什么吧 O(∩_∩)O</textarea>
+            <input type="button" class="bbl-btn" id="J_cmtSubmit" value="确定">
         </div>
 
             <div class="cmt clearfix cmt-noworth" data-cmtid="1" data-proid="23">
@@ -208,13 +208,13 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
             <a rel="followTheme" href="javascript:;" class="follow  mt5 mr10" data-type="1" data-themeid="@theme.id.get" title="关注">+ 关&nbsp;注</a>
             } 36人
         </div>
-        <div class="theme-share share32  clearfix">
+        <div class="share-link share32  clearfix" data-sharetxt="@theme.name ,@theme.intro" data-sharepic="@theme.pic" data-sharelink="@controllers.routes.Themes.view(theme.id.get)">
             <h3 class="title mt10">分享到：</h3>
 
-                <a class="sh_sina fl" href="javascript:;" alt="分享到新浪微博">新浪微博</a>
-                <a class="sh_qzone fl" href="javascript:;" alt="分享到QQ空间">QQ空间</a>
-                <a class="sh_tencent fl" href="javascript:;" alt="分享到腾讯微博">腾讯微博</a>
-                <a class="sh_renren fl" href="javascript:;" alt="分享到人人网">人人网</a>
+                <a class="sh_sina fl" href="javascript:;" data-type="s-sina" alt="分享到新浪微博">新浪微博</a>
+                <a class="sh_qzone fl" href="javascript:;" data-type="s-qzone" alt="分享到QQ空间">QQ空间</a>
+                <a class="sh_tencent fl" href="javascript:;" data-type="s-tencent" alt="分享到腾讯微博">腾讯微博</a>
+                <a class="sh_renren fl" href="javascript:;" data-type="s-renren" alt="分享到人人网">人人网</a>
 
         </div>
          <div class="theme-lovers">
@@ -255,7 +255,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/theme/theme.detail,app/theme/theme.discuss,app/theme/theme.favor,app/goods/goods.favor');
+        init.load('app/theme/theme.detail2,app/theme/theme.favor,app/goods/goods.favor');
 
     });
 </script>
