--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -860,7 +860,7 @@ input:-moz-placeholder { font-size:12px; }
     height: 37px;
     display: block;
     float: left;
-    margin-right: 3px;
+    padding-left: 5px;
     text-indent: -100em;
     cursor: pointer;
 }
