--- a/public/assets/css/template/theme.css
+++ b/public/assets/css/template/theme.css
@@ -775,7 +775,7 @@
     padding-bottom: 20px;
     border-bottom: 1px solid #f2f2f2;
 }
-.loves .theme-share{
+.loves .share-link{
     padding-bottom: 20px;
     border-bottom: 1px solid #ddd;
 }
