--- a/app/views/pages/miss.scala.html
+++ b/app/views/pages/miss.scala.html
@@ -244,7 +244,7 @@ title = " 美食街_食美特，爱美食爱生活"
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/jie,app/theme/theme.favor');
+        init.load('app/miss,app/theme/theme.favor');
     });
 </script>
         }
