--- a/app/views/pages/china.scala.html
+++ b/app/views/pages/china.scala.html
@@ -41,44 +41,40 @@ title =  "特色中国_食美特，爱美食爱生活"
 
 
 
-    <div class="goods-wall s1024" id="J_GoodsWall">
-        <div class="section">
+    <div class="china-wall r10 clearfix" >
+        <ul class="section clearfix">
 
             @for((goods,i)<-page.items.view.zipWithIndex) {
+           <li @if((i)%2==0){class="left"}else{ class="right" } >
+               <div class="baobei">
+                   <div class="baobei-pic">
+                       <a class="pic-link" href="@controllers.routes.Goods.view(goods.id.get)" title="@goods.name" target="_blank">
+                           <img src='@(goods.pic+"_360x360.jpg")' width="360" height="360" title="@goods.name" alt="@goods.name" />
+                       </a>
+                   </div>
+                   <p class="baobei-des">
+                       @goods.intro
+                   </p>
+                   <div class="baobei-stat">
+                       <span class="mr10 like-count">@goods.loveNum</span>
 
-            <div class="goods small @if((i+1)%4==0){last} ">
-                <div class="goods-pic">
-                    <a class="pic-link" href="@controllers.routes.Goods.view(goods.id.get)" title="@goods.name" target="_blank">
-                        <img src='@(goods.pic+"_210x210.jpg")' width="210" height="210" title="@goods.name" alt="@goods.name" />
-                    </a>
-                    <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goods.pic" data-prourl="@controllers.routes.Goods.view(goods.id.get)" data-proname="@goods.name" data-type="0" data-proid="@goods.id.get">
-                        <i></i>
-                        <span class="ilikeCount" data-val="@goods.loveNum">喜欢(@goods.loveNum)</span>
-                    </a>
-                </div>
-                <div class="goods-title ofh">
-                    @goods.name
-                </div>
-                <div class="goods-stat">
-                    <span class="mr10 like-count">@goods.loveNum</span>
+                       @if(goods.promotionPrice.isEmpty){
+                       <span>￥@goods.price</span>
+                       }else{
+                       @if(goods.price!=goods.promotionPrice.get){
+                       <span style="text-decoration: line-through">￥@goods.price</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                       <span>￥@goods.promotionPrice</span>
+                       }else{  <span>￥@goods.price</span> }
+                       }
+                   </div>
 
-                    @if(goods.promotionPrice.isEmpty){
-                    <span>￥@goods.price</span>
-                    }else{
-                    @if(goods.price!=goods.promotionPrice.get){
-                    <span style="text-decoration: line-through">￥@goods.price</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span>￥@goods.promotionPrice</span>
-                    }else{  <span>￥@goods.price</span> }
-                    }
-                </div>
-                <p class="goods-des">
-                    @goods.intro
-                </p>
 
-            </div>
+               </div>
+
+           </li>
 
             }
-        </div>
+        </ul>
 
     </div>
 
