--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -13,43 +13,37 @@ description = goods.intro
 
         <div class="main">
             <!-- pic show-->
-            <div class="gallery">
+
                 <div class="pic-box">
                     @if(user.isEmpty){
                     <a  rel="loginD2" data-numiid="@goods.numIid" data-goodsid="@goods.id.get" data-rate="@goods.rate"  target="_blank" rel="nofollow">
-                        <img id="J_PicCover" src="@goods.pic" alt="@goods.name" />
+
+                        @for(img<-goods.itemPics.split("&")){
+                        <img  src='@(img+"_460x460.jpg")' alt="@goods.name" width="460" />
+                        }
                     </a>
 
                     }else{
                     <a class="pic-link"  href="@controllers.ugc.routes.API.gotoTaobao(goods.numIid,goods.id.get,goods.rate)" target="_blank"  rel="nofollow">
-                        <img id="J_PicCover" src="@goods.pic" alt="@goods.name" />
+
+                        @for(img<-goods.itemPics.split("&")){
+                        <img  src='@(img+"_460x460.jpg")' alt="@goods.name" width="460" />
+                        }
                     </a>
                     }
-
 
 
                     <a rel="nofollow" class="ilike-m" href="javascript:;" data-type="0" data-proimgsrc="@goods.pic" data-proid="@goods.id" title="喜欢 +1">
                         <i></i>
                         <span id="J_LikeCount" class="ilikeCount" data-val="@goods.loveNum">喜欢(@goods.loveNum)</span>
                     </a>
-                </div>
-                <div class="thumb clearfix" >
-                    <div class="thumb-list scrollable">
-                        <div class="items">
-                            <ul class="clearfix">
 
-                                @for(img<-goods.itemPics.split("&")){
-                                <li >
-                                    <a href="javascript:void(0)"><img data-src="@img" src='@(img+"_80x80.jpg")' alt="@goods.name" /></a>
-                                </li>
-                                }
 
-                            </ul>
-                        </div>
-                    </div>
+                        <a class="bbl-btn pic-more">查看更多图片&gt;&gt;</a>
 
                 </div>
-            </div>
+
+
             <!--pic show end-->
 
 
@@ -57,29 +51,29 @@ description = goods.intro
         </div>
         <!-- aside begin -->
         <div class="side">
-             <div class="buy-info">
-                 <div class="intro">
-                     @if(goods.intro!=""){
-                     @goods.intro
-                     <span class="intro-quot"></span>
-                     }
-                 </div>
-                 <div class="first-share">
-                     <div class="user-info clearfix">
-                         <div class="pic fl">
-                             <a target="_blank" href="@controllers.users.routes.Users.home(firstShareUser.id.get)">
-                                 <img width="30" height="30" src="@firstShareUser.pic" alt="@firstShareUser.name" class="fl">
-                             </a>
-                         </div>
-                         <div class="info fl">
-                             <a target="_blank" href="@controllers.users.routes.Users.home(firstShareUser.id.get)" class="uname">@firstShareUser.name</a>
-                            &nbsp;&nbsp;&nbsp; <span>@firstShareUser.credits&nbsp;个<a href="/jifenbao">集分宝</a>，@firstShareUser.shiDou&nbsp;个<a href="/shiDou">食豆</a></span>&nbsp;&nbsp;&nbsp;<span class="come-from">来自 @models.user.ComeFrom(firstShareUser.comeFrom)</span>
-                         </div>
+            <span class="arrow-left"></span>
+
+
+                 <div class="user-recommend clearfix">
+                     <div class="pic fl">
+                         <a target="_blank" href="@controllers.users.routes.Users.home(firstShareUser.id.get)">
+                             <img width="60" height="60" src="@firstShareUser.pic" alt="@firstShareUser.name" class="fl">
+                         </a>
+                     </div>
+                     <div class="intro fl">
+                         @if(goods.intro!=""){
+                         @goods.intro
+                         <span class="intro-quot"></span>
+                         }
                      </div>
                  </div>
+            <div class="buy-info">
                  <div class="buy-box  clearfix">
                      <dl class="buy-meta">
                          <dt><h3 class="title"> @goods.name</h3></dt>
+
+
+
                          <dd class="clearfix">
                              <div class="price">
                                  价格：
@@ -111,22 +105,17 @@ description = goods.intro
                          <a rel="nofollow" class="info-wrong" href="javascript:;" id="J_JiuCuo" data-proid="488">信息有误？</a>
                      <div class="share-link" data-sharetxt="@goods.name" data-sharepic="@goods.pic" data-sharelink="@controllers.routes.Goods.view(goods.id.get)">
                          <label class="fl l20 gc">分享到：</label>
-                         <a class="s-sina fl" href="javascript:;" data-type="s-sina" alt="分享到新浪微博">新浪微博</a>
-                         <a class="s-qzone fl" href="javascript:;" data-type="s-qzone" alt="分享到QQ空间">QQ空间</a>
-                         <a class="s-tencent fl" href="javascript:;" data-type="s-tencent" alt="分享到腾讯微博">腾讯微博</a>
-                         <a class="s-douban fl" href="javascript:;" data-type="s-douban" alt="分享到豆瓣">豆瓣</a>
-                         <a class="s-renren fl" href="javascript:;"  data-type="s-renren" alt="分享到人人网">人人网</a>
+                         <a class="s-sina fl" href="javascript:;" data-type="s-sina" alt="分享到新浪微博"></a>
+                         <a class="s-qzone fl" href="javascript:;" data-type="s-qzone" alt="分享到QQ空间"></a>
+                         <a class="s-tencent fl" href="javascript:;" data-type="s-tencent" alt="分享到腾讯微博"></a>
+                         <a class="s-douban fl" href="javascript:;" data-type="s-douban" alt="分享到豆瓣"></a>
+                         <a class="s-renren fl" href="javascript:;"  data-type="s-renren" alt="分享到人人网"></a>
 
                      </div>
                  </div>
              </div>
-
-
             <!-- first share end  -->
-
-
-
-                    <div class="comment-list">
+               <div class="comment-list">
                         <div class="comment-publish clearfix">
                             <div class="pub-box clearfix">
                                 <input type="hidden" id="J_productId" name="goodsId" value="@goods.id.get">
@@ -180,26 +169,20 @@ description = goods.intro
                         <!--comment end-->
 
                     </div>
-                    <!--comment-list end-->
-
-
+             <!--comment-list end-->
         </div>
         <!-- aside end -->
 
     </div>
-<div id="product-like">
+<!--<div id="product-like">
     <h3>猜你喜欢</h3>
     <div class="goods-wall">
 
 
 
     </div>
-  <!--  <div class="morefind">
-        <a href="http://smeite.com/find" title="发现喜欢" target="_blank">
-            <img src="/assets/ui/detail-more.png" title="发现喜欢" alt="发现喜欢"/>
-        </a>
-    </div>-->
-</div>
+
+</div>-->
 </div><!--container end-->
 
 
