--- a/public/assets/css/template/china.css
+++ b/public/assets/css/template/china.css
@@ -85,21 +85,6 @@
 
 
 
-.goods-wall {
-    margin-top: 10px
-}
-
-
-
-.box-shadow {
-    box-shadow: 0 1px 3px rgba(34, 25, 25, 0.2);
-    -moz-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.2);
-    -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.2);
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px
-}
-
 .sort {
     color: #dedede;
     line-height: 20px;
@@ -122,270 +107,38 @@
 }
 
 
-.goods-wall {
+.china-wall {
     position: relative;
     min-height: 500px;
-    margin-top: 20px
-}
+    margin-top: 20px;
+    padding: 15px;
+    background-color: #fff;
 
-.goods-wall .section .left {
-    float: left
 }
-
-.goods-wall .section .right {
-    float: right
+.china-wall li{
+   padding-bottom: 20px;
+    border-bottom: 1px dotted #DDD;
 }
-
-.goods-wall .section .col-l {
-    float: left
-}
-
-.goods-wall .section .col-c {
+.china-wall .left{
     float: left;
-    width: 230px
+    width:460px ;
+    padding-right: 14px;
+    border-right: 1px dotted #DDD;
 }
-
-.goods-wall .section .col-r {
-    float: right
+.china-wall .right{
+    float: right;
+    width: 460px;
+    padding-left: 15px;
 }
-
-.goods {
+.baobei {
     position: relative;
     float: left;
-    width: 210px;
-    height: 290px;
-    padding: 9px;
+    padding: 30px;
     border: 1px #fff solid;
     color: #999;
     background-color: white;
-    box-shadow: 0 0 0 rgba(34, 25, 25, 0.2);
-    -moz-box-shadow: 0 0 0 rgba(34, 25, 25, 0.2);
-    -webkit-box-shadow: 0 0 0 rgba(34, 25, 25, 0.2);
-    transition: 0s;
-    -webkit-transition: 0s;
-    -moz-transition: 0s;
-    -o-transition: 0s
 }
 
-.goods .goods-title {
-    width: 210px;
-    padding-top: 6px;
-    height: 20px;
-    line-height: 20px;
-    color: #333
-}
-
-.goods .goods-11-title {
-    width: 210px
-}
-
-.goods .goods-11-title .goods-title {
-    float: left;
-    width: 170px
-}
-
-.goods .goods-11-title .goods-title-11-mark {
-    float: left;
-    background: #e26;
-    color: #fff;
-    font-size: 12px;
-    padding: 0 2px;
-    margin-top: 8px
-}
-
-.goods .goods-pic {
-    width: 210px;
-    height: 210px;
-    overflow: hidden;
-    background: #fff url(images/bg-photo.gif) repeat-y;
-    position: relative;
-}
-
-.goods .goods-pic img {
-    filter: alpha(opacity = 95);
-    opacity: .95
-}
-
-.goods .goods-stat {
-    color: #999;
-    height: 20px;
-    line-height: 20px;
-    padding: 0 0 3px 10px;
-    background: url(images/grayHeart2.png) 0 5px no-repeat;
-    font-family: 'Microsoft YaHei', '黑体'
-}
-
-.goods .goods-stat del {
-    margin-right: 5px
-}
-
-.goods .goods-stat .price-discount {
-    padding-right: 43px;
-    background: url(images/detail-sprite.png) right -103px no-repeat
-}
-
-.goods .goods-des {
-    display: none
-}
-
-.goods .comment {
-    position: relative;
-    background: #fff;
-    overflow: hidden
-}
-
-.goods .comment .user-pic {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    overflow: hidden
-}
-
-.goods .comment .user-pic img {
-    height: 20px;
-    width: 20px
-}
-
-.goods .comment .content {
-    margin-left: 30px;
-    line-height: 20px;
-    height: 20px;
-    overflow: hidden;
-    word-wrap: break-word;
-    word-break: break-all;
-    width: 180px
-}
-
-.goods .comment .content span {
-    color: #999
-}
-
-.goods .comment .content span em {
-    color: #999;
-    margin: 0 5px
-}
-
-.goods .comment .content span a {
-    color: #999
-}
-
-.goods .comment .content span a:hover {
-    text-decoration: none;
-    color: #333
-}
-
-.goods .comment .user-name {
-    color: #999
-}
-
-.goods .comment .user-name:hover {
-    text-decoration: none
-}
-
-.goods .comment .comment-item {
-    padding: 10px 0;
-    position: relative;
-    border-top: 1px dotted #dedede
-}
-
-.goods .ilike-topic {
-    padding-left: 26px;
-    left: 80px;
-    top: 10px
-}
-
-.small .comment {
-    height: 41px
-}
-
-.s1024 {
-    margin-top: 0
-}
-.s1024 .section {
-    position: relative;
-}
-
-.s1024 .goods {
-    margin-top: 20px;
-    margin-right: 20px
-}
-.s1024 .last{
-    margin-right: 0;
-}
-.cur-goods {
-    z-index: 100
-}
-
-.cur-goods .goods-pic img {
-    filter: alpha(opacity = 100);
-    opacity: 1
-}
-
-.cur-goods .goods-title {
-    color: #333
-}
-
-.cur-goods .goods-stat {
-    color: #333
-}
-
-.cur-goods .goods-des {
-    color: #333
-}
-
-.cur-goods .comment .content span {
-    color: #333
-}
-
-.cur-goods .comment .user-name {
-    color: #333
-}
-
-.cur-goods .comment .content span a {
-    color: #333
-}
-
-.s1024 .section .cur-goods .goods-title {
-    color: #333
-}
-
-.goods-clone {
-    position: absolute;
-    z-index: 100;
-    top: -1px;
-    left: -1px;
-    border: 1px #fff solid;
-    padding: 0 9px;
-    background: #fff;
-    box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 8px
-}
-
-.goods .goods-clone .goods-pic {
-    margin-top: 9px
-}
-
-.goods .goods-clone .comment {
-    overflow: visible;
-    height: auto
-}
-
-.goods .goods-clone .comment .content {
-    height: auto;
-    overflow: visible
-}
-
-.small .goods-clone {
-    min-height: 290px;
-    width: 210px;
-
-
-}
-
-.small .goods-clone .comment {
-    min-height: 41px
-}
 
 .pagin4faxian {
     position: relative;
