--- a/public/assets/css/template/goods.detail.css
+++ b/public/assets/css/template/goods.detail.css
@@ -14,35 +14,27 @@
 }
 
 .product-main {
-    width: 950px;
-    margin: 0 auto 25px;
-    background: #fff;
-    padding: 15px 15px 5px 15px;
-+ padding : 15 px;
-    _padding: 15px 15px 5px 15px;
+    margin: 20px auto 25px;
 }
 
 .main {
-    width:470px;
+    border: 1px solid #ddd;
+    background: white;
+    text-align: center;
+    margin-bottom: 40px;
+    padding: 15px ;
+    width: 460px;
     float: left;
-    background-color: #f5f5f5
 }
 
-.gallery {
+ .pic-box {
     width: 460px;
-    padding:5px;
-    border-bottom: 1px dotted #eee;
-    float: left
-}
-
-.gallery .pic-box {
-    width: 460px;
-    height: 460px;
+     float: left;
     overflow: hidden;
     position: relative
 }
 
-.gallery .pic-box .pic-link {
+ .pic-box .pic-link {
     width: 460px;
     height: 460px;
     display: table-cell;
@@ -54,143 +46,36 @@
     outline: 0
 }
 
-.gallery .pic-box img {
+ .pic-box img {
     max-width: 460px;
+    padding-bottom: 20px;
     vertical-align: middle
 }
 
-.gallery .thumb {
-    padding: 10px
-}
 
-.gallery .thumb-list {
-    margin: 0 0 0 14px;
-    width: 380px;
-    height: 64px;
-    position: relative;
-    float: left;
-    overflow: hidden
-}
-
-.gallery .thumb-list .items {
-    width: 2000em;
-    height: 64px;
-    position: absolute;
-    z-index: 9;
-    left: 0;
-    top: 0
-}
-
-.gallery .thumb-list ul {
-    width: 380px;
-    float: left;
-    overflow: hidden
-}
-
-.gallery .thumb-list li {
-    float: left;
-    background: #fff;
-    margin: 0 6px;
-    *display: inline
-}
-
-.gallery .thumb-list li a {
-    width: 60px;
-    height: 60px;
-    display: table-cell;
-    *display: block;
-    vertical-align: middle;
-    text-align: center;
-    border: 2px solid #dedede;
-    overflow: hidden;
-    *font-size: 49px;
-    *line-height: 1
-}
-
-.gallery .thumb-list li a img {
-    max-width: 60px;
-    max-height: 60px;
-    _width: 60px
-}
-
-.gallery .thumb-list li.cur a, .gallery .thumb-list li a:hover {
-    border-color: #5ad
-}
-
-.tags {
-    width: 460px;
-    padding: 10px 0 25px;
-    margin-bottom: 10px;
-    float: left
-}
-
-.tags h3 {
-    color: #87B32E;
-    font-size: 14px;
-    line-height: 22px;
-    height: 22px;
-    padding-left: 10px;
-}
-
-.tags  .tag-wrap a {
-    display: inline-block;
-    height: 22px;
-    line-height: 22px;
-    border-radius: 12px;
-    border: 1px solid #d3d3d3;
-    padding: 0 10px;
-    background-color: #fff;
-    margin: 5px 5px 5px 2px
-}
-
-.tags .tag-wrap a:hover {
-    background-color: #588C0E;
-    color: #fff
-}
-
-.tags .tag-wrap a:active {
-    color: #fff
-}
-
-.tags .more {
-    float: right;
-    font-size: 12px;
-    color: #87B32E;
-    line-height: 22px;
-    margin: 0 37px 0 0;
-}
-
-.tags li {
-    width: 110px;
-    height: 110px;
-    overflow: hidden;
-    float: left;
-    margin: 8px 6px 0 0;
-}
-
-.tags li .show_img {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    width: 110px;
-    height: 110px;
-    padding: 0;
-}
 
 /*side */
 .side {
     float: right;
-    width: 460px;
+    width: 430px;
     position: relative;
+    background: white;
+    padding: 20px;
+    border: 1px solid #DDD;
 }
 
-.side .buy-info {
-    position: relative;
-    margin: 0 0 20px;
+
+.side .arrow-left{
+    position: absolute;
+    top: 60px;
+    left: -12px;
+    width: 12px;
+    height: 17px;
+    overflow: hidden;
+    background: url(images/ico_common.png) no-repeat -152px -5144px;
 }
 
-
-.side .intro  {
+.user-recommend .intro  {
     position: relative;
     text-indent: 30px;
     padding: 10px;
@@ -200,7 +85,7 @@
     word-break: break-all;
     zoom: 1;
 }
-.side .intro-quot {
+.user-recommend .intro-quot {
     position: absolute;
     top: 8px;
     left: 15px;
@@ -209,90 +94,72 @@
 background: url(images/ico-quotation.png) no-repeat
 }
  /* user info */
-.side .first-share {
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
-}
 
 
-.side .user-info .pic {
-    margin-right: 8px;
-}
 
-.side .user-info .info{
-    height: 30px;
-    line-height: 30px;
-}
-.side .user-info  a {
-    font-size: 14px;
-}
-.side .user-info  a:hover{
-    color: #ff7f00;
-    text-decoration: underline;
-}
 
-.side .user-info  .come-from {
-    color: #CCC;
+.side .buy-info {
+    position: relative;
+    margin: 0 0 20px;
 }
-
-.side .title {
+.buy-info .title {
     font-size: 16px;
     font-weight: bolder;
     padding: 10px 0;
 }
-.side .buy-box {
+.buy-info .buy-box {
     padding: 10px 0;
     position: relative;
 }
 
-.side .buy-box .buy-meta {
+.buy-info .buy-box .buy-meta {
     margin-bottom: 15px;
     overflow: hidden
 }
 
 
-.side .buy-box  dd {
+.buy-info .buy-box  dd {
     font-size: 14px;
     font-family:"微软雅黑";
     padding: 10px;
     color: #000;
 }
-.side .buy-box  dd a{
+.buy-info .buy-box  dd a{
     /*color: #5AD;*/
 }
-.side .buy-box  dd  a:hover{
+.buy-info .buy-box  dd  a:hover{
     color: #ff7f00;
     text-decoration: underline;
 }
-.side .buy-box .price,.side .buy-box .volume{
+.buy-info .buy-box .price,.buy-info .buy-box .volume{
     float: left;
     height: 35px;
     line-height: 35px;
 }
-.side .buy-box .price{
+.buy-info .buy-box .price{
     width: 250px;
 }
-.side .buy-box .volume{
+.buy-info .buy-box .volume{
 
 }
-.side .buy-box  dd span{
+.buy-info .buy-box  dd span{
     color: #e26;
     font-weight: bold;
 }
-.side .buy-box  .price-normal {
+.buy-info .buy-box  .price-normal {
     font-size: 14px;
     text-decoration: line-through;
     color: #555;
 }
 
-.side .buy-box  .price-promotion {
+.buy-info .buy-box  .price-promotion {
     font-size: 20px;
     font-weight: bolder;
     color: #e26;
 }
 
 
-.buy-btn {
+.buy-info .buy-btn {
     float:left;
     margin-left:30px;
     width: 100px;
@@ -309,7 +176,7 @@ background: url(images/ico-quotation.png) no-repeat
     text-decoration: none;
 }
 
-.buy-btn2 {
+.buy-info .buy-btn2 {
     float:right;
     height: 34px;
     line-height: 34px;
@@ -320,7 +187,7 @@ background: url(images/ico-quotation.png) no-repeat
 
 }
 
-.side .buy-info .operate {
+ .buy-info .operate {
     padding: 15px 5px;
     background: #FFFDF7;
     border-radius: 0 0 5px 5px;
@@ -328,7 +195,7 @@ background: url(images/ico-quotation.png) no-repeat
     line-height: 16px;
 }
 
-.side .buy-info .info-wrong {
+ .buy-info .info-wrong {
     float: right;
 }
 
